trunk/NewArchive/73b1dafbc47cd4fc30d493d05289cd44-50d9cfc8a1d350e7409e81e87c2653ba/output
+ g++-4.8 -std=c++11 -O2 -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:5:34: error: cannot dynamic_cast 'f' (of type 'void*') to type 'class foo*' (source is not a pointer to class)
     auto x = dynamic_cast<foo*>(f);
                                  ^
